--- a/res/values/quickswitch_arrays.xml
+++ b/res/values/quickswitch_arrays.xml
@@ -19,7 +19,7 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string-array name="quickswitch_launcher_entries">
-        <item>QuickStep</item>
+        <item>Pixeldust Launcher</item>
         <item>Pixel Launcher</item>
     </string-array>
     <string-array name="quickswitch_launcher_values" translatable="false">
