--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -29,16 +29,16 @@
         settings:controller="com.android.settings.deviceinfo.DeviceNamePreferenceController"
         settings:isPreferenceVisible="false" />
 
-    <PreferenceCategory
-        android:key="basic_info_category"
+    <Preference
         android:order="0"
         android:selectable="false"
-        android:title="@string/my_device_info_basic_info_category_title">
+        android:title="@string/my_device_info_basic_info_category_title"/>
 
         <!-- Account name -->
         <Preference
             android:key="branded_account"
             android:order="2"
+            android:icon="@drawable/ic_cog"
             android:title="@string/my_device_info_account_preference_title"
             android:summary="@string/summary_placeholder"
             settings:enableCopying="true"
@@ -48,47 +48,23 @@
         <com.android.settings.deviceinfo.PhoneNumberSummaryPreference
             android:key="phone_number"
             android:order="3"
+            android:icon="@drawable/phone_tint"
             android:title="@string/status_number"
             android:summary="@string/summary_placeholder"
             settings:isPreferenceVisible="@bool/config_show_sim_info"
             settings:controller="com.android.settings.deviceinfo.PhoneNumberPreferenceController"
             settings:enableCopying="true"/>
-    </PreferenceCategory>
 
-    <!--PreferenceCategory
-        android:title="@string/my_device_info_legal_category_title"-->
-
-        <!-- Legal information -->
-        <!--<Preference
-            android:key="legal_container"
-            android:order="15"
-            android:title="@string/legal_information"
-            android:fragment="com.android.settings.LegalSettings"/>-->
-
-        <!-- Regulatory labels -->
-        <!--Preference
-            android:key="regulatory_info"
-            android:order="16"
-            android:title="@string/regulatory_labels">
-            <intent android:action="android.settings.SHOW_REGULATORY_INFO"/>
-        </Preference-->
-
-        <!-- Safety & regulatory manual -->
-        <!--Preference
-            android:key="safety_info"
-            android:order="17"
-            android:title="@string/safety_and_regulatory_info"/-->
-    <!--/PreferenceCategory-->
-
-    <PreferenceCategory
-        android:key="device_detail_category"
+    <Preference
         android:selectable="false"
-        android:title="@string/my_device_info_device_details_category_title">
+        android:order="15"
+        android:title="@string/my_device_info_device_details_category_title"/>
 
         <!-- SIM status -->
         <Preference
             android:key="sim_status"
             android:order="18"
+            android:icon="@drawable/ic_sim_card"
             android:title="@string/sim_status_title"
             settings:keywords="@string/keywords_sim_status"
             android:summary="@string/summary_placeholder"
@@ -99,6 +75,7 @@
         <Preference
             android:key="device_model"
             android:order="30"
+            android:icon="@drawable/ic_model_hardware"
             android:title="@string/model_info"
             android:summary="@string/summary_placeholder"
             android:fragment="com.android.settings.deviceinfo.hardwareinfo.HardwareInfoFragment"
@@ -110,6 +87,7 @@
         <com.android.settings.network.telephony.TelephonyPreferenceDialog
             android:key="eid_info"
             android:order="31"
+            android:icon="@drawable/ic_info"
             android:title="@string/status_eid"
             android:summary="@string/device_info_protected_single_press"
             android:positiveButtonText="@string/dlg_ok"
@@ -122,6 +100,7 @@
         <com.android.settings.deviceinfo.PhoneNumberSummaryPreference
             android:key="imei_info"
             android:order="32"
+            android:icon="@drawable/ic_info"
             android:title="@string/status_imei"
             android:summary="@string/summary_placeholder"
             settings:keywords="@string/keywords_imei_info"
@@ -133,29 +112,32 @@
         <Preference
             android:key="firmware_version"
             android:order="42"
+            android:icon="@drawable/ic_android_head"
             android:title="@string/firmware_version"
             android:summary="@string/summary_placeholder"
             android:fragment="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionSettings"
             settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionPreferenceController"/>
-    </PreferenceCategory>
 
-    <PreferenceCategory
-        android:title="@string/my_device_info_device_identifiers_category_title">
+
+    <Preference
+      android:order="43"
+        android:title="@string/my_device_info_device_identifiers_category_title"/>
 
         <!--IP address -->
         <Preference
             android:key="wifi_ip_address"
             android:order="44"
+            android:icon="@drawable/ic_settings_wireless"
             android:title="@string/wifi_ip_address"
             android:summary="@string/summary_placeholder"
-            android:selectable="false"
             settings:enableCopying="true"/>
 
         <!-- Wi-Fi MAC address -->
         <Preference
             android:key="saved_accesspoints_wifi_mac_address"
             android:order="45"
-            android:title="@string/status_wifi_mac_address"
+            android:icon="@drawable/ic_settings_wireless"
+            android:title="@string/saved_networks"
             android:summary="@string/view_saved_network"
             android:fragment="com.android.settings.wifi.savedaccesspoints2.SavedAccessPointsWifiSettings2"
             settings:enableCopying="false"/>
@@ -164,24 +146,25 @@
         <Preference
             android:key="wifi_mac_address"
             android:order="46"
+            android:icon="@drawable/ic_settings_wireless"
             android:title="@string/status_device_wifi_mac_address"
             android:summary="@string/summary_placeholder"
-            android:selectable="false"
             settings:enableCopying="true"/>
 
         <!-- Bluetooth address -->
         <Preference
             android:key="bt_address"
             android:order="47"
+            android:icon="@drawable/ic_bluetooth_disabled"
             android:title="@string/status_bt_address"
             android:summary="@string/summary_placeholder"
-            android:selectable="false"
             settings:enableCopying="true"/>
 
         <!-- Device up time -->
         <Preference
             android:key="up_time"
             android:order="48"
+            android:icon="@drawable/ic_cog"
             android:title="@string/status_up_time"
             android:summary="@string/summary_placeholder"
             android:selectable="false"/>
@@ -212,10 +195,9 @@
         <Preference
             android:key="build_number"
             android:order="53"
+            android:icon="@drawable/ic_info"
             android:title="@string/build_number"
             android:summary="@string/summary_placeholder"
             settings:enableCopying="true"
             settings:controller="com.android.settings.deviceinfo.BuildNumberPreferenceController"/>
-    </PreferenceCategory>
-
 </PreferenceScreen>
